# YANGEP

./: .gitignore  .memories  CMakeLists.txt  README.md  cmake.sh  imgui.ini  known_bugs.txt  makefile
actionEditor/: DebugActionWindow.cpp  DebugActionWindow.h  DebugActionsListWindow.cpp  DebugActionsListWindow.h  main.cpp
assets/: a.json  action-editor-window-config.json  window-config.json  window-config.steamdeck.json
assets/Art/LevelPNGs/: YANGEP_ONE.tmx  dungeon_tiles.tsx  magecity.tsx
assets/DataFiles/Actions/Cone7Out/: action.json  hitbox.json
assets/DataFiles/Actions/OneTile/: action.json  hitbox.json
assets/DataFiles/Actions/Test-A/: action.json  hitbox.json
assets/DataFiles/Actions/Test-B/: action.json  hitbox.json
assets/DataFiles/Actions/ThreeWide/: action.json  hitbox.json
assets/DataFiles/Actions/TwoInFront/: action.json
assets/DataFiles/Entities/: player.json
assets/DataFiles/Entities/player/: character.json
assets/DataFiles/Entities/redhead_skeleton/: character.json  state_machines.json
assets/DataFiles/Entities/skeleton/: character.json  state_machines.json  state_machines_all.json
assets/DataFiles/EntityFiles/: player.json
assets/DataFiles/Items/: item-a.json  item-b.json
assets/DataFiles/StateDefaults/: move_to_position.json  wait.json
assets/DataFiles/StateMachines/: info.txt  print_2s.json  print_5s.json  wander.json
assets/GUI/: RPG_GUI_moonmod_source_autocut.json
assets/Levels/actionEditor/: actionEditor.tmx  details.json
assets/Levels/test_four/: details.json  entities1red.json  test_four.tmx
assets/Levels/test_one/: dungeon_tiles.tsx  magecity.tsx  test_one.tmx  test_two.tmx
assets/Levels/test_three/: details.json  test_three.tmx
assets/Levels/test_two/: details.json  entities.json  entities1.json  entities10.json  entities100.json  entities200.json  test_two.tmx
assets/Worlds/test-a/: levels.json
assets/shaders/: dissolve.shd  green_flash.shd  red_flash.shd  trail_smear.shd
docs/: navmesh.md
docs/features/: hud_ui.md  job_system_usage.md
docs/features/load_and_render_character_sprite/: phase1_plan.md  phase1_png_api_architecture_guide.md  project_plan.md  testing_setup_plan.md
scripts/: action_editor.sh  build.sh  common.sh  copy_assets_to_build.sh  get_latest_core_dump.sh  make_build_dir.sh  pull_steamdeck_input_log.sh  remove_build_assets.sh  run.sh  scp_steamdeck.sh  ssh_steamdeck.sh  test.sh  update_assets_from_debug_build.sh  version.sh  version.txt  versions.txt
src/: animation_demo_main.cpp  main.cpp
src/lib/: AnimatedDataCharacter.cpp  AnimatedDataCharacter.h  AnimatedDataCharacterNavMeshAgent.cpp  AnimatedDataCharacterNavMeshAgent.h  AnimatedDataCharacterNavMeshPlayer.cpp  AnimatedDataCharacterNavMeshPlayer.h  AnimatedSprite.cpp  AnimatedSprite.h  Animation.cpp  Animation.h  AnimationDemo.cpp  AnimationDemo.h  Behavior.cpp  Behavior.h  CFNativeCamera.cpp  CFNativeCamera.h  Camera.cpp  Camera.h  DataFile.cpp  DataFile.h  DataFileDebugWindow.cpp  DataFileDebugWindow.h  DebugFPSWindow.cpp  DebugFPSWindow.h  DebugJobWindow.cpp  DebugJobWindow.h  DebugPrint.cpp  DebugPrint.h  DebugPrintControlWindow.cpp  DebugPrintControlWindow.h  DebugWindow.cpp  DebugWindow.h  DebugWindowList.cpp  DebugWindowList.h  HitBox.cpp  HitBox.h  JobSystem.cpp  JobSystem.h  LevelV1.cpp  LevelV1.h  (+42 more)
src/lib/Camera/: CFNativeCamera.cpp  Camera.h
src/lib/Character/: AnimatedDataCharacter.cpp  AnimatedDataCharacter.h  AnimatedDataCharacterNavMeshAgent.cpp  AnimatedDataCharacterNavMeshAgent.h  AnimatedDataCharacterNavMeshPlayer.cpp  AnimatedDataCharacterNavMeshPlayer.h
src/lib/Character/Behavior/: Behavior.cpp  WanderBehavior.cpp
src/lib/Character/Coordinator/: Coordinator.cpp  Coordinator.h  NearPlayerTileGrid.cpp  NearPlayerTileGrid.h
src/lib/Character/FileHandling/: SpriteAnimationLoader.cpp  SpriteAnimationLoader.h
src/lib/Character/StateMachines/: State.cpp  State.h  StateLibrary.cpp  StateLibrary.h  StateMachine.cpp  StateMachine.h  StateMachineController.cpp  StateMachineController.h
src/lib/Combat/: ABActions.cpp  ABActions.h  Action.cpp  Action.h  Damage.cpp  Damage.h  HitBox.cpp  HitBox.h  todo.txt
src/lib/Debug/: DataFileDebugWindow.cpp  DataFileDebugWindow.h  DebugCharacterInfoWindow.cpp  DebugCharacterInfoWindow.h  DebugCoordinatorWindow.cpp  DebugCoordinatorWindow.h  DebugFPSWindow.cpp  DebugFPSWindow.h  DebugInputInfoWindow.cpp  DebugInputInfoWindow.h  DebugJobWindow.cpp  DebugPlayerInfoWindow.cpp  DebugPlayerInfoWindow.h  DebugStateMachineWindow.cpp  DebugStateMachineWindow.h  DebugStateWindow.cpp  DebugStateWindow.h  DebugWindow.cpp  DebugWindow.h  DebugWindowList.cpp
src/lib/Effects/: DissolveEffect.cpp  DissolveEffect.h  EffectFactory.cpp  EffectFactory.h  GhostTrailRenderer.cpp  GhostTrailRenderer.h  GreenFlashEffect.cpp  GreenFlashEffect.h  IGhostTrailEffect.h  IVisualEffect.h  RedFlashEffect.cpp  RedFlashEffect.h  ShaderRegistry.cpp  ShaderRegistry.h  TrailGhostEffect.cpp  TrailGhostEffect.h  VisualEffectBase.h
src/lib/FileHandling/: DataFile.cpp  DataFile.h  RealConfigFile.cpp  Utils.cpp  Utils.h
src/lib/Items/: Inventory.cpp  Inventory.h  Item.cpp  Item.h
src/lib/JobSystem/: JobSystem.h  OnScreenChecks.cpp  OnScreenChecks.h
src/lib/Level/FileHandling/: tmx.h  (+2 more)
src/lib/UI/: AtlasLabelerWindow.cpp  AtlasLabelerWindow.h  ColorUtils.cpp  ColorUtils.h  HighlightTile.cpp  HighlightTile.h  HudUI.cpp  HudUI.h
tests/: main.cpp
tests/assets/: test_atlas.json  test_character.json
tests/assets/skeleton/: skeleton.json
tests/fixtures/: TestFixture.hpp
tests/integration/: AssetLoadingTest.cpp  SpriteSystemIntegrationTest.cpp  SpriteSystemTest.cpp  SpriteSystemTest.h  TMXRenderingTest.cpp  test_asset_loading.cpp
tests/unit/: AnimatedSpriteTest.cpp  AnimationTest.cpp  CFNativeCameraTest.cpp  DataFileTest.cpp  DataFileTest.h  DebugWindowTest.cpp  DebugWindowTest.h  PNGSpriteTest.cpp  PNGValidationTest.cpp  SpriteAnimationLoaderTest.cpp  SpriteBatchTest.cpp  SpriteTest.cpp  TMXTest.cpp  UtilsTest.cpp  UtilsTest.h  WalkcyclePNGLoadingTest.cpp
tools/atlas_autocut/: atlas_autocut.cpp
(+24 files in other folders)
